@@ -2,6 +2,7 @@ package com.gentics.mesh.core.rest.node;
 
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonPropertyDescription;
+import com.gentics.mesh.core.rest.schema.SchemaReference;
 import com.gentics.mesh.core.rest.user.NodeReference;
 
 /**
@@ -13,7 +14,30 @@ public class NodeCreateRequest extends NodeUpdateRequest {
 	@JsonPropertyDescription("Reference to the parent node in which the node will be created. The uuid of this object must be set.")
 	private NodeReference parentNode;
 
+	@JsonProperty(required = true)
+	@JsonPropertyDescription("Reference to the schema of the node.")
+	private SchemaReference schema;
+
 	public NodeCreateRequest() {
+	}
+
+	/**
+	 * Return the schema name.
+	 * 
+	 * @return Schema reference
+	 */
+	public SchemaReference getSchema() {
+		return schema;
+	}
+
+	/**
+	 * Set the schema name.
+	 * 
+	 * @param schema
+	 *            Schema reference
+	 */
+	public void setSchema(SchemaReference schema) {
+		this.schema = schema;
 	}
 
 	/**
